--- a/public/botui.html
+++ b/public/botui.html
@@ -117,7 +117,7 @@
 
         try {
           const response = await fetch(
-            'https://smym-backend-service.azurewebsites.net/api/v1/chatbot/initiate',
+            'https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate',
             {
               method: 'POST',
               headers: {
@@ -149,7 +149,7 @@
             return;
           }
 
-          const data = await response.json();
+          const data = await response.json(); // this comes via Backend from Zapier
           console.log('[BotUI] Success response:', data);
 
           // Remove loading message
@@ -202,7 +202,7 @@
 
             // Send to API with session context
             const response = await fetch(
-              'https://smym-backend-service.azurewebsites.net/api/v1/chatbot/chat',
+              'https://backend.scottmakesyoumove.com/api/v1/chatbot/response',
               {
                 method: 'POST',
                 headers: {
