--- a/public/botui.html
+++ b/public/botui.html
@@ -119,17 +119,20 @@
 
         try {
           // Fire the initial request
-          await fetch('https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-              Authorization: `Bearer ${bearerToken}`,
+          const response = await fetch(
+            'https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate',
+            {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+                Authorization: `Bearer ${bearerToken}`,
+              },
+              body: JSON.stringify(initialPayload),
             },
-            body: JSON.stringify(initialPayload),
-          });
+          );
 
           // Wait until Zapier's response is ready — poll until ai_response arrives
-          let aiResponse = null;
+          /* let aiResponse = null;
           const maxAttempts = 20;
           let attempts = 0;
 
@@ -157,7 +160,10 @@
             }
 
             attempts++;
-          }
+          } */
+
+          const data = await response.json();
+          const aiResponse = data.ai_response;
 
           botui.message.removeAll();
 
@@ -225,7 +231,7 @@
               },
               body: JSON.stringify(payload),
             });
-
+            /* 
             // Step 4: Wait for Zapier to process (~3-5 seconds)
             await new Promise((resolve) => setTimeout(resolve, 4000));
 
@@ -240,7 +246,7 @@
                 },
                 body: JSON.stringify(payload), // same as original payload
               },
-            );
+            ); */
 
             botui.message.remove(thinking.id);
 
