:art: Add missing response variable

--- a/public/botui.html
+++ b/public/botui.html
@@ -223,7 +223,7 @@
             };
 
             // Step 3: Send user message to Zapier via backend
-            await fetch('https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate', {
+            const response = await fetch('https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json',
