--- a/public/botui.html
+++ b/public/botui.html
@@ -223,14 +223,17 @@
             };
 
             // Step 3: Send user message to Zapier via backend
-            const response = await fetch('https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate', {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json',
-                Authorization: `Bearer ${bearerToken}`,
+            const response = await fetch(
+              'https://backend.scottmakesyoumove.com/api/v1/chatbot/initiate',
+              {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                  Authorization: `Bearer ${bearerToken}`,
+                },
+                body: JSON.stringify(payload),
               },
-              body: JSON.stringify(payload),
-            });
+            );
             /* 
             // Step 4: Wait for Zapier to process (~3-5 seconds)
             await new Promise((resolve) => setTimeout(resolve, 4000));
